--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --text-color: #000500;
+  --background-color: #F1FEF1;
+  --primary-color: #D77353;
+  --secondary-color: #FFE5E0;
+  --accent-color: #3E6823; 
+
+  --primary-font: 'Prata', serif;
+  --secondary-font: 'Montserrat', sans-serif;
+
   line-height: 1.5;
-  font-weight: 400;
+  font-family: var(--secondary-font);
+  font-weight: 500;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--text-color);
+  background-color: var(--background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,18 +25,27 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
+::selection{
+  background-color: var(--accent-color);
+  color: var(--background-color);
+}
+
+::-moz-selection{
+  background-color: var(--accent-color);
+  color: var(--background-color);
+}
+
+ a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--text-color);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--text-color);
 }
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -34,6 +54,14 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: var(--primary-font);
+}
+
+h2{
+  font-size: 2.5em;
+  font-family: var(--secondary-font);
+  text-transform: uppercase;
+  text-align: center;
 }
 
 button {
@@ -43,7 +71,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--primary-color);
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -53,6 +81,12 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+img{
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 @media (prefers-color-scheme: light) {
