Add pages folder

--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@
 }
 
 .skill-card .order{
-  background-image: url("./assets/green-flower.svg");
+  background-image: url("./assets/flower.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 5rem;
