--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,10 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 1.5em 0;
   font-family: var(--primary-font);
   text-transform: uppercase;
+  text-align: center;
 }
 
 h2{
