--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display+SC:wght@400;700;900&display=swap');
 
 :root {
-  --text-color: #000500;
-  --background-color: #F1FEF1;
-  --primary-color: #D77353;
-  --secondary-color: #FFE5E0;
-  --accent-color: #3E6823; 
+  --text-color: #FAFFFA;
+  --text-color-10: rgba(250, 255, 250, 0.1);
+  --background-color: #010E01;
+  --accent-color: #AE4A29; 
+  --accent-color-20: rgba(174, 74, 41, 0.2); 
+  --accent-color-40: rgba(174, 74, 41, 0.4); 
 
-  --primary-font: 'Prata', serif;
+  --primary-font: 'Playfair Display SC', serif;
   --secondary-font: 'Montserrat', sans-serif;
 
   line-height: 1.5;
@@ -17,6 +18,8 @@
   color-scheme: light dark;
   color: var(--text-color);
   background-color: var(--background-color);
+
+  scroll-behavior: smooth;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -35,11 +38,12 @@
   color: var(--background-color);
 }
 
- a {
+a {
   font-weight: 500;
   color: var(--text-color);
   text-decoration: inherit;
 }
+
 a:hover {
   color: var(--text-color);
 }
@@ -56,6 +60,7 @@ h1 {
   line-height: 1.1;
   margin: 1.5em 0;
   font-family: var(--primary-font);
+  font-weight: 700;
   text-transform: uppercase;
   text-align: center;
 }
@@ -67,25 +72,6 @@ h2{
   text-align: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: var(--primary-color);
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 img{
   user-select: none;
   -webkit-user-select: none;
@@ -94,13 +80,11 @@ img{
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+    --text-color: #050002;
+    --text-color-10: rgba(5, 0, 2, .1);
+    --background-color: #FEF5F1;
+    --accent-color: #D67351; 
+    --accent-color-20: rgba(214, 115, 81, .2); 
+    --accent-color-40: rgba(214, 115, 81, .4); 
   }
 }
