--- a/src/components/project/Project.styles.scss
+++ b/src/components/project/Project.styles.scss
@@ -36,7 +36,7 @@
       justify-content: flex-end;
       gap: 10px;
 
-      & .contact-link{
+      & .action-element{
         background-color: transparent;
         min-height: 20px;
         padding: .3em;
@@ -45,7 +45,7 @@
           opacity: .7;
         }
 
-        & .contact-link-icon{
+        & .action-element-icon{
           height: 20px;
         }
       }
