Add images for projects

--- a/src/components/navbar/Navbar.styles.scss
+++ b/src/components/navbar/Navbar.styles.scss
@@ -4,6 +4,7 @@
   margin: auto;
   top: 15px;
   position: sticky;
+  z-index: 1;
 
   border: .3px solid var(--text-color-10);
   border-radius: 100px;
