--- a/src/components/project/Project.styles.scss
+++ b/src/components/project/Project.styles.scss
@@ -1,4 +1,17 @@
 .project-wrapper{
+  display: flex;
+  flex-direction: column;
+  transition: all .2s linear;
+
+  &:hover{
+    scale: 1.02;
+    z-index: 0;
+  }
+
+  & .project-image{
+    width: 100%;
+    object-fit: cover;
+  }
   
   & .title{
     font-size: 1.5em;
