--- a/src/components/home/Home.styles.scss
+++ b/src/components/home/Home.styles.scss
@@ -37,6 +37,15 @@
       gap: .5em .3em;
     }
 
+    @media screen and (max-width: 1050px){
+    }
+    
+    @media screen and (max-width: 850px){
+    }
+  
+    @media screen and (max-width: 650px){
+    }
+
   }
 
 }
