--- a/src/components/home/Home.styles.scss
+++ b/src/components/home/Home.styles.scss
@@ -37,13 +37,58 @@
       gap: .5em .3em;
     }
 
-    @media screen and (max-width: 1050px){
+    @media screen and (max-width: 1150px){
+      & h1{
+        font-size: 3em;
+      }
+
+      & .intro-flex {
+        
+        & .intro-name{
+          width: 500px;
+        }
+      }
     }
     
-    @media screen and (max-width: 850px){
+    @media screen and (max-width: 750px){
+      & h1{
+        font-size: 2.3em;
+      }
+
+      & .intro-flex {
+        
+        & .intro-name{
+          width: 430px;
+        }
+      }
     }
   
-    @media screen and (max-width: 650px){
+    @media screen and (max-width: 600px){
+
+      & h1{
+        font-size: 1.7em;
+      }
+
+      & .intro-flex {
+        
+        & .intro-name{
+          width: 300px;
+        }
+      }
+    }
+
+    @media screen and (max-width: 405px){
+
+      & h1{
+        font-size: 1.6em;
+      }
+
+      & .intro-flex {
+        
+        & .intro-name{
+          width: 250px;
+        }
+      }
     }
 
   }
