--- a/src/components/label/Label.styles.scss
+++ b/src/components/label/Label.styles.scss
@@ -10,4 +10,10 @@
   &:hover{
     background-color: var(--accent-color-40);
   }
+
+  @media screen and (max-width: 600px){
+    font-size: .7em;
+  }
+
+
 }
