Make contact section responsive

--- a/src/components/action-element/ActionElement.styles.scss
+++ b/src/components/action-element/ActionElement.styles.scss
@@ -19,4 +19,12 @@
     height: 76px;
     aspect-ratio: 1/1;
   }
+
+  @media screen and (max-width: 450px){
+    font-size: .65em;
+
+    & .action-element-icon{
+      height: 55px;
+    }
+  }
 }
