--- a/src/components/contact/Contact.styles.scss
+++ b/src/components/contact/Contact.styles.scss
@@ -5,5 +5,11 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+
+    @media screen and (max-width: 760px) {
+      display: grid;
+      grid-template-columns: repeat(2, 50%);
+      gap: .5em;
+    }
   }
 }
